--- a/drivers/mtd/devices/Kconfig
+++ b/drivers/mtd/devices/Kconfig
@@ -208,6 +208,14 @@ config MTD_ST_SPI_FSM
 	  SPI Fast Sequence Mode (FSM) Serial Flash Controller and support
 	  for a subset of connected Serial Flash devices.
 
+config MTD_NPCM_FIUX
+	tristate "Support NPCM FIUX"
+	depends on SPI_MASTER && MTD_RAM
+	select SPI_MEM
+	help
+	  This enables access to RAM devices like CPLD thourgh the FIUX mode 
+	  in NPCM BMC's, the MTD ram using the spi-mem interface.
+
 if MTD_DOCG3
 config BCH_CONST_M
 	default 14
