dts: arm64: nuvoton: npcm8xx: add #gpio-cells in sgpio node
Signed-off-by: Joseph Liu <kwliu@nuvoton.com>

--- a/arch/arm64/boot/dts/nuvoton/nuvoton-common-npcm8xx.dtsi
+++ b/arch/arm64/boot/dts/nuvoton/nuvoton-common-npcm8xx.dtsi
@@ -575,6 +575,7 @@
 				compatible = "nuvoton,npcm845-sgpio";
 				interrupts = <GIC_SPI 19 IRQ_TYPE_LEVEL_HIGH>;
 				gpio-controller;
+				#gpio-cells = <2>;
 				pinctrl-names = "default";
 				pinctrl-0 = <&iox1_pins>;
 				bus-frequency = <16000000>;
@@ -589,6 +590,7 @@
 				compatible = "nuvoton,npcm845-sgpio";
 				interrupts = <GIC_SPI 20 IRQ_TYPE_LEVEL_HIGH>;
 				gpio-controller;
+				#gpio-cells = <2>;
 				pinctrl-names = "default";
 				pinctrl-0 = <&iox2_pins>;
 				bus-frequency = <16000000>;
