Add PCIe NPCM7xx support
This commit add PCIe device tree and configuration, the PCI configuration
are disabled in the npcm7xx_defconfig file.

Signed-off-by: Tomer Maimon <tmaimon77@gmail.com>

--- a/arch/arm/boot/dts/nuvoton-npcm750-evb.dts
+++ b/arch/arm/boot/dts/nuvoton-npcm750-evb.dts
@@ -363,6 +363,14 @@
 	spix-mode;
 };
 
+&pcie {
+	/* used for e1000e PCI -> AXI window opening */
+       	dma-ranges = <0x02000000 0 0x00000000 0x00000000 0 0x40000000>;
+	npcm-pci-rc-rst = <&gpio0 29 1>;
+	npcm-pci-ep-rst = <&gpio0 29 1>;
+	status = "okay";
+};
+
 &sdhci0 {
 	status = "okay";
 };
