--- a/arch/arm/configs/npcm7xx_defconfig
+++ b/arch/arm/configs/npcm7xx_defconfig
@@ -115,3 +115,6 @@ CONFIG_READABLE_ASM=y
 CONFIG_DEBUG_SECTION_MISMATCH=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_FUNCTION_TRACER=y
+#CONFIG_PCI=y
+#CONFIG_PCI_MSI=y
+#CONFIG_PCIE_NPCM=y
