misc: vcd/ece: Use dynamic CMA allocation
Change to use dynamic CMA allocation, and add interrupt property in
ECE node so as to share DT between legacy VCD/ECE and V4L2 drivers.
This interrupt property is only used by legacy VCD/ECE drivers.

--- a/arch/arm/boot/dts/nuvoton-common-npcm7xx.dtsi
+++ b/arch/arm/boot/dts/nuvoton-common-npcm7xx.dtsi
@@ -311,6 +311,7 @@
 		ece: video-codec@f0820000 {
 			compatible = "nuvoton,npcm750-ece";
 			reg = <0xf0820000 0x2000>;
+			interrupts = <GIC_SPI 24 IRQ_TYPE_LEVEL_HIGH>;
 			resets = <&rstc NPCM7XX_RESET_IPSRST2 NPCM7XX_RESET_ECE>;
 			status = "disabled";
 		};
